--- a/web/assets/css/main.css
+++ b/web/assets/css/main.css
@@ -146,3 +146,9 @@ input:focus {
 .list li {
     padding: 5px;
 }
+.status-running {
+    background-color: lightgreen;
+}
+.status-stopped {
+    background-color: red;
+}
