--- a/web/assets/css/main.css
+++ b/web/assets/css/main.css
@@ -39,6 +39,7 @@ form label {
     width: 150px;
     text-align: right;
     padding-right: 20px;
+    margin-top: -20px;
 }
 label input[type="text"],
 label input[type="password"] {
