- Improve Model: array accessable; - Add `ciin()` validator for string case insenstive scenarios - Add more task assign related logic of ldtdf

--- a/web/assets/css/main.css
+++ b/web/assets/css/main.css
@@ -178,6 +178,12 @@ input:focus {
 .status-stopped {
     background-color: red;
 }
+.text-task {
+    color: cornflowerblue;
+}
+.text-bug {
+    color: crimson;
+}
 .text-info {
     color: lightgrey;
 }
