- Improve in/notin validator; add view html escape - Add more ldtdf logic, test task flow - Add lang() alias L()
`# Please enter the commit message for your changes. Lines starting

--- a/web/assets/css/main.css
+++ b/web/assets/css/main.css
@@ -178,11 +178,17 @@ input:focus {
 .status-stopped {
     background-color: red;
 }
+.text-todo {
+    color: coral;
+}
 .text-task {
     color: cornflowerblue;
 }
 .text-bug {
     color: crimson;
+}
+.text-danger {
+    color: red;
 }
 .text-info {
     color: lightgrey;
@@ -237,4 +243,15 @@ input:invalid {
 }
 .search-res-right-close {
     margin-left: 10px;
+}
+.inline {
+    display: inline;
+}
+.comments {
+    background-color: #F8FAFE;
+    display: inline-block;
+    width: 80%;
+    height: 24px;
+    padding: 10px 0 0 20px;
+    margin: 0;
 }
