--- a/web/assets/css/main.css
+++ b/web/assets/css/main.css
@@ -252,6 +252,7 @@ input:invalid {
     display: inline-block;
     width: 80%;
     height: 24px;
+    overflow: auto;
     padding: 10px 0 0 20px;
     margin: 0;
 }
