fix firefox button doesnt work pbl

--- a/web/assets/css/main.css
+++ b/web/assets/css/main.css
@@ -170,7 +170,7 @@ input:focus {
 }
 .btn-doc {
     background-color: floralwhite;
-    color: #eeeeee;
+    color: #darkcyan;
 }
 .btn-default a,
 .btn-alert a,
