- Add and improve some helpers - Loose validation return fail condition - Improve ldtdf task deploy logic: make task config project script works

--- a/web/assets/css/main.css
+++ b/web/assets/css/main.css
@@ -23,8 +23,8 @@ code {
     color: maroon;
     background-color: #eeeeee;
 }
-header {
-    margin-top: 10px;
+header, footer {
+    margin-top: 20px;
 }
 form, section {
     margin: 10px;
