- Improve Builder where condition check logic, more flexible - LDTDF: support assign to developer principals when create story/bug; and add one more task status: waiting_edit - Fix some helpers

--- a/web/assets/css/main.css
+++ b/web/assets/css/main.css
@@ -362,3 +362,14 @@ input:invalid {
     display: inline-block;
     float: left;
 }
+.checkbox-list {
+    display: -webkit-flex; /* Safari */
+    display: flex;
+    padding-left: 120px;
+    flex-wrap: wrap;
+    /*flex-direction: row-reverse;*/
+    justify-content: space-between;
+    width: 80%;
+    max-height: 200px;
+    overflow: auto;
+}
